RESOLVED FIXED20496
[Qt] Canvas.rotate() doesn't work
https://bugs.webkit.org/show_bug.cgi?id=20496
Summary [Qt] Canvas.rotate() doesn't work
Dirk Schulze
Reported 2008-08-24 04:19:14 PDT
rotate() in Canvas does't work as expected. The problem is, that you give a radian to the GraphicsContext, but p->rotate() need a value in degree.
Attachments
fix of rotate() in Canvas (1.13 KB, patch)
2008-08-24 04:24 PDT, Dirk Schulze
hausmann: review+
Dirk Schulze
Comment 1 2008-08-24 04:24:25 PDT
Created attachment 22960 [details] fix of rotate() in Canvas Transformed the radian to a degree.
Simon Hausmann
Comment 2 2008-08-24 23:58:42 PDT
Comment on attachment 22960 [details] fix of rotate() in Canvas Good catch, thanks!
Simon Hausmann
Comment 3 2008-08-25 00:10:35 PDT
Landed in r35913
Note You need to log in before you can comment on or make changes to this bug.