008-08-25  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Simon.

        Transformed the radian to degree, to get rotate()
        in canvas work as expected.

        [Qt] Canvas.rotate() doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=20496

Canonical link: https://commits.webkit.org/28318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35913 268f45cc-cd09-0410-ab3c-d52691b4dbfc